--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/dsdeliver
+spring.datasource.url=jdbc:postgresql://localhost:5432/dsdeliver1
 spring.datasource.username=postgres
 spring.datasource.password=ZmC3P5c32
 
